# option_quant_trade_system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  changes_summary.md  conversation-2025-12-24-180306.txt  new_profile_out.txt  profile.stats  profile_full.py  profile_full.stats  profile_out.txt  pyproject.toml  requirements-lock.txt  requirements.txt  test_db_perf.py  test_portfolio_perf.py  trace_network.py
config/: routing.yaml  settings.yaml
examples/: data_layer_demo.py  engine_demo.py
logs/: fundamental_verification_20251218_140626.json  fundamental_verification_20251218_143352.json  fundamental_verification_20251223_134953.json  fundamental_verification_20251225_102830.json  fundamental_verification_20251225_102916.json  fundamental_verification_20251225_102925.json  fundamental_verification_20251225_102935.json  technical_verification_0700.HK_20251219_145504.json  technical_verification_0700.HK_20251219_145516.json  technical_verification_0700.HK_20251219_145529.json  technical_verification_0700.HK_20251219_145842.json  technical_verification_0700.HK_20251219_145853.json  technical_verification_0700.HK_20251219_145902.json  technical_verification_TSLA_20251219_141954.json  technical_verification_TSLA_20251219_142030.json  technical_verification_TSLA_20251219_142342.json  technical_verification_TSLA_20251219_145206.json  technical_verification_TSLA_20251219_145411.json  technical_verification_TSLA_20251219_150034.json  volatility_verification_20251218_153044.json  volatility_verification_20251218_154502.json  volatility_verification_20251218_154807.json  volatility_verification_20251218_161601.json  volatility_verification_20251218_163750.json  volatility_verification_20251218_163809.json  volatility_verification_20251218_164854.json  volatility_verification_20251218_165733.json  volatility_verification_20251218_180053.json  volatility_verification_20251218_180649.json  volatility_verification_20251218_180714.json  volatility_verification_20251218_181243.json  volatility_verification_20251218_181406.json  volatility_verification_20251218_181441.json  volatility_verification_20251218_181942.json  volatility_verification_20251218_182035.json  (+26 more)
(+727 files in other folders)
